--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ motor = "^3.3.1"
 tqdm = "^4.66.1"
 pyyaml = "^6.0.1"
 
-
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.16.1"
+
+[tool.poetry.scripts]
+mongo2pq = 'mongo2pq.main:run'
 
 [build-system]
 requires = ["poetry-core"]
