chore: prepare repository for publishing publicly
To prepare the repository for being published publicly:
- Add MIT LICENSE
- Add full README
- Update dependencies
- Complete pyproject file
- Add sample_config to document accepted configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "mongo2pq"
 version = "0.1.0"
-description = ""
+description = "Script to extract collections from MongoDB and load it to Parquet"
 authors = ["Tadeas Uhlir <tadeas.uhlir@gmail.com>"]
 readme = "README.md"
 
